@@ -2,7 +2,7 @@ local __Scripts = LibStub:GetLibrary("ovale/Scripts")
 local OvaleScripts = __Scripts.OvaleScripts
 do
     local name = "icyveins_monk_brewmaster"
-    local desc = "[8.1.0] Icy-Veins: Monk Brewmaster"
+    local desc = "[8.2.0] Ovale_TankScripts: Monk Brewmaster"
     local code = [[
 Include(ovale_common)
 Include(ovale_monk_spells)
